add the html for the card

--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
   <body>
 
 <article class="card">
-  <header class="card-body"
+  <header class="card-head">
+    <h2 class="card-title">Stegosaurus</h2>
+    <span class="card-label">Plant-eaters</span>
+    <img class="img-flex" scr="https://placehold.it/640x480" alt="">
+  </header>
+  <div class="card-body">
+    <p> The Stegosaurus is an armoured dinosaur with distinctive back plates and tail spikes.</p>
+  </div>
+</article>
 
 
   </body>
