--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Image card</title>
-    <meta name="viewport" conent="width=device-width,initial-scale-1">
+    <meta name="viewport" content="width=device-width,initial-scale-1">
     <link href="css/main.css" rel="stylesheet"
   </head>
   <body>
