--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Image card</title>
-    <meta name="viewport" content="width=device-width,initial-scale-1">
-    <link href="css/main.css" rel="stylesheet"
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>Image card</title>
+  <meta name="viewport" content="width=device-width,initial-scale-1">
+  <link href="css/main.css" rel="stylesheet">
+</head>
+<body>
 
-<article class="card">
-  <header class="card-head">
-    <h2 class="card-title">Stegosaurus</h2>
-    <span class="card-label">Plant-eaters</span>
-    <img class="img-flex" scr="https://placehold.it/640x480" alt="">
-  </header>
-  <div class="card-body">
-    <p> The Stegosaurus is an armoured dinosaur with distinctive back plates and tail spikes.</p>
-  </div>
-</article>
+  <article class="card">
+    <header class="card-head">
+      <h2 class="card-title">Stegosaurus</h2>
+      <span class="card-label">Plant-eater</span>
+      <img class="img-flex" src="https://placehold.it/640x480" alt="">
+    </header>
+    <div class="card-body">
+      <p> The Stegosaurus is an armoured dinosaur with distinctive back plates and tail spikes.</p>
+    </div>
+  </article>
 
-
-  </body>
+</body>
 </html>
